# zilium

./: .gitignore  AUTHORS.md  BUILD.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  EXAMPLES.md  LICENSE  README.md  VBMETA_COMPATIBILITY.md  build-windows.bat  build.sh
.github/workflows/: build-and-release.yml  ci.yml
docs/: CONTRIBUTING.md  FAQ.md  INSTALLATION.md  QUICK_REFERENCE.md  README.md  USER_GUIDE.md  WINDOWS_SUPPORT.md
gui/: README.md  qml.qrc
gui/qml/: GuideDialog.qml  LicenseWindow.qml  PartitionDelegate.qml  ThemeManager.qml  main.qml  main_windows.qml
gui/src/: main.cpp  partitionmodel.cpp  partitionmodel.h  superconfigmodel.cpp  superconfigmodel.h  ziliumcontroller.cpp  ziliumcontroller.h
lptools-prebuilt/linux/: lpmake  lpunpack
lpunpack_and_lpmake/lib/liblp/: utility.cpp
src/: zilium_core.h  zilium_super_compactor.cpp
windows/: CMakeLists.txt  installer.nsi  zilium.manifest  zilium.rc
